[package]
name = "the-elements"
version = "0.1.0"
edition = "2024"
description = "A lightweight script that provides objects and enum variants for each of the elements in the periodic table (as of writing)"
license = "MIT"

[dependencies]
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
